sample_old_arxiv_ver/Table1/runtime_error_attempt_49.txt
Traceback (most recent call last):
  File "/Users/kubotaso/Library/CloudStorage/Dropbox/lib/AI_WVS/Replication_scripts/MainScript_Table1.py", line 278, in try_run_generated_code
    spec.loader.exec_module(mod)  # type: ignore[attr-defined]
    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^
  File "<frozen importlib._bootstrap_external>", line 1022, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/kubotaso/Library/CloudStorage/Dropbox/lib/AI_WVS/Replication_scripts/output_table1/generated_analysis_retry_49.py", line 124
    rows.append({"model": model_name, "term": v, "beta_std": beta, "p_raw": p, "cell": cell)
                                                                                           ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '{'
